Mở tính năng cho phép login và tạo tài khoản SSO bằng SĐT

--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -83,7 +83,7 @@
                 </div>
 
             </div>
-            <div class="row" style="justify-content: center;padding-top: 10px;">
+            <!-- <div class="row" style="justify-content: center;padding-top: 10px;">
                 <div class="col-md-2" style="text-align: center;">
                     <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
                     <span> {{'unit.active' | translate}}</span>
@@ -92,8 +92,8 @@
                     <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
                     <span> {{'unit.inactive' | translate}}</span>
                 </div>
-            </div>
-            <!-- <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
+            </div> -->
+            <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
               <div style="display: flex;">
                 <div style="display: flex;">
                   <span>{{'choose.type.sign' | translate}}:</span>
@@ -109,11 +109,11 @@
                     <input type="radio" name="confirm-radio-consider" value="EMAIL_AND_SDT" formControlName="login_type" name="login_type">
                     <span> {{'type.sign.email.phone' | translate}}</span>
                   </div>
-                </div> -->
+                </div>
 
-                <!-- <div style="display: flex; margin-left: 35px;"> -->
+                <div style="display: flex; margin-left: 35px;">
                 <!-- <div style="display: flex;"> -->
-                  <!-- <span>{{'status.account' | translate}}:</span>
+                  <span>{{'status.account' | translate}}:</span>
                   <div style="margin-left: 20px;">
                     <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
                     <span> {{'unit.active' | translate}}</span>
@@ -123,8 +123,8 @@
                     <span> {{'unit.inactive' | translate}}</span>
                   </div>
                 </div>
-              </div> -->
-            <!-- </div> -->
+              </div>
+            </div>
         </div>
 
         <br>
