--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div style="margin: 0px 16px;">
                     <div *ngFor="let d of this.datasForm.contract_user_sign" class="show-list-name-class">
-                        <div *ngIf="!d.sign_config.position"[ngClass]="{'resize-drag': d.sign_unit !== 'chu_ky_so'}"  (click)="showThumbnail()"
+                        <div *ngIf="!d.sign_config.position"[ngClass]="{'resize-drag': d.sign_unit !== 'chu_ky_so', 'text-shd': d.sign_unit == 'text' || d.sign_unit == 'so_tai_lieu'}"  (click)="showThumbnail()"
                             [id]=getIdSignChuaKeo(d.id)>
                             <div style="position: relative; display: contents;">
                                 <!-- sửa lại nên bỏ [ngStyle]="setWidth(d)" -->
