--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -15,8 +15,11 @@
             </div>
             <div class="col-md-4">
                 <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
-                <div class="input-data hidden-color">
-                    <input type="text" formControlName="email" [readonly]="true" class="hidden-color">
+                <div class="input-data" *ngIf="this.isDisable == 'SDT'">
+                  <input type="text" formControlName="email">
+                </div>
+                <div *ngIf="this.isDisable == 'EMAIL' || this.isDisable == 'EMAIL_AND_SDT'" class="input-data hidden-color">
+                  <input type="text" formControlName="email" readonly>
                 </div>
                 <div *ngIf="submitted && f.email.errors" class="invalid">
                     <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
@@ -34,11 +37,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <!-- <input type="text" formControlName="phone"> -->
-                    <input type="text" formControlName="phone" *ngIf="this.disablePhone != 'EMAIL_AND_SDT'">
-                    <input type="text" formControlName="phone" [readonly]="true" class="hidden-color" *ngIf="this.disablePhone == 'EMAIL_AND_SDT'" style="min-height: 31px">
-
+                <div class="input-data" *ngIf="this.isDisable == 'EMAIL'">
+                  <input type="text" formControlName="phone">
+                </div>
+                <div *ngIf="this.isDisable == 'SDT' || this.isDisable == 'EMAIL_AND_SDT'" class="input-data hidden-color">
+                  <input type="text" formControlName="phone" readonly>
                 </div>
                 <div *ngIf="submitted && f.phone.errors" class="invalid">
                     <div *ngIf="f.phone.errors.required">{{'error.user.phone.required' | translate}}</div>
