--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -18,6 +18,9 @@
 
                 <div class="col-md-4">
                     <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
+                    <div class="input-data" *ngIf="!this.isDisable">
+                      <input type="text" formControlName="email">
+                    </div>
                     <div class="input-data" *ngIf="this.isDisable === 'SDT'">
                         <input type="text" formControlName="email">
                     </div>
@@ -41,6 +44,9 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
+                    <div class="input-data" *ngIf="!this.isDisable">
+                      <input type="text" formControlName="phone">
+                    </div>
                     <div class="input-data" *ngIf="this.isDisable === 'EMAIL'">
                       <input type="text" formControlName="phone">
                   </div>
