Thêm trạng thái Thanh lý cho các màn báo cáo

--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -87,6 +87,7 @@
                             <td>{{list.value.canceled}}</td>
                             <td>{{list.value.prepare_expires}}</td>
                             <td>{{list.value.expired}}</td>
+                            <td>{{list.value.liquidated}}</td>
                     </ng-container>
                 </tr>
             </ng-template>
@@ -101,6 +102,7 @@
                     <td>{{this.total.canceled}}</td>
                     <td>{{this.total.prepare_expires}}</td>
                     <td>{{this.total.expired}}</td>
+                    <td>{{this.total.liquidated}}</td>
                 </tr>
             </ng-template>
 
