--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -122,6 +122,11 @@
                 </tr>
 
                 <tr>
+                    <td>{{this.convert('liquidated')}}</td>
+                    <td>{{list.liquidated}}</td>
+                </tr>
+
+                <tr>
                     <td style="font-style: normal;font-weight: 700;font-size: 13px;color: #106DB6;">{{this.convert('total')}}</td>
                     <td>{{list.total}}</td>
                 </tr>
