--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -239,7 +239,7 @@ h3{
 }
 
 .add-contract-theme{
-  background: url("../../../assets/img/frame_db1.svg");
+  //background: url("../../../assets/img/frame_db1.svg");
   background-size: cover;
   max-width: 100%;
   // height: 170px;
