css footer-text

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -59,11 +59,11 @@
   background: #FFFFFF33;
 }
 
-// .footer-text {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center
-// }
+.footer-text {
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
 
 .copyright{
   color: #FFFFFFDB;
