--- a/src/app/login/forgot-password/forgot-password.component.scss
+++ b/src/app/login/forgot-password/forgot-password.component.scss
@@ -1,11 +1,9 @@
 .header-label{
-  padding-top: 30px;
   font-size: 24px;
   font-weight: 500;
   color: #FFFFFF;
 }
 .header-infor{
-  padding-top: 30px;
   font-weight: 500;
   color: #FFFFFF;
   font-size: 14px;
@@ -16,43 +14,36 @@
 }
 .header_language {
   position: absolute;
-  right: 0px;
-  padding: 5px;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
 }
+
 .form-signin {
   max-width: 480px;
   margin: 0 auto;
 }
 
-.form-signin_mobile {
-  max-width: 480px;
-  margin: 0 auto;
-  padding-top: 10%;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-
-.login-form{
-  padding-right: 40%;
-  padding-left: 40%;
-  padding-top: 10.5%;
-}
+// .login-form{
+//   padding-right: 40%;
+//   padding-left: 40%;
+// }
 
 #login-form{
   min-width: 370px;
 }
 
-.login-form-mobile{
-  padding-top: 60%;
-  padding-left: 5%;
-  padding-right: 5%;
-}
+// .login-form-mobile{
+//   padding-top: 20%;
+//   padding-left: 5%;
+//   padding-right: 5%;
+// }
 
 .form-group{
   // margin: 20px;
 }
 .bg-footer-login {
-  background-color: #FFFFFF;
+  // background-color: #FFFFFF;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -67,24 +58,31 @@
   font-weight: 800;
   font-size: 40px;
   line-height: 48px;
-  color: #fff;
+  background: #FFFFFF33;
+}
+
+.footer-text {
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
 
 .copyright{
+  color: #FFFFFFDB;
+  font-weight: 300;
   font-size: 14px;
-  color: #001A4DDB;
-  font-weight: 400;
-  // font-family: Roboto;
+  line-height: 16px;
 }
 
 .btn-block {
-  background-color: #FFFFFF;
-  color: #0041C4;
+  background-color: #FFFFFF33;
+  color: #FFFFFF;
   height: 40px;
   font-size: 14px;
   width: 100%;
   border-radius: 8px;
   text-transform: uppercase;
+  box-shadow: 0px 3px 10px 0px #106DB60F;
 }
 .note{
   color: #FFFFFF;
@@ -208,17 +206,18 @@ img {
   // max-width: 1280px;
   position: relative;
   // background: url("../../assets/img/BG.svg") center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
   // background-size: cover;
   width: 100%;
   height: 100%;
   // background-size: contain;
-  margin: auto;
-}
-.full-height {
-  min-height: 100vh;
+  //margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .flex-row {
   flex-direction: row!important;
@@ -243,24 +242,36 @@ img {
 }
 
 .right-panel {
-  width: 100%;
-  height: calc(100vh);
-  position: relative;
+  // width: 100%;
+  // height: calc(100vh);
+  // position: relative;
+  width: 381px;
+  height: 505px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .right-panel-mobile {
-  width: 100%;
-  height: calc(100vh);
-  position: relative;
-  background-size: cover;
-  // background: url("../../assets/img/login_webmobile.png");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  // width: 100%;
+  // height: calc(100vh);
+  // position: relative;
+  // background-size: cover !important;
+  // //background: url("../../assets/img/login_webmobile.png");
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  width: 381px;
+  height: 505px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-h
+
 .small-logo {
-  height: calc(20vh);
+  //height: calc(20vh);
   // text-align: center;
 }
 .justify-content-center {
@@ -408,4 +419,34 @@ h
 
 input:-internal-autofill-selected{
   background-color: #FFFFFF1F!important;
+}
+
+.login {
+  color: #FFFFFF;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+}
+
+.infor-login {
+  color: #F0F0F0;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+}
+
+.input-text-login::placeholder {
+  color: #F0F0F0;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 300;
+  opacity: 60%;
+}
+
+.input-text-login:focus::placeholder {
+  color: #F0F0F0;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 300;
+  opacity: 60%;
 }
