--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -58,7 +58,7 @@
                     id="username"
                     placeholder="{{ 'login.username' | translate }}"
                     formControlName="email"
-                    class="input-text"
+                    class="input-text input-text-login"
                   />
                 </div>
               </div>
