--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -234,7 +234,7 @@
                   id="username"
                   placeholder="{{ 'login.username' | translate }}"
                   formControlName="username"
-                  class="input-text"
+                  class="input-text input-text-login"
                 />
               </div>
             </div>
@@ -246,7 +246,7 @@
                   [type]="fieldTextType ? 'text' : 'password'"
                   placeholder="{{ 'login.password' | translate }}"
                   formControlName="password"
-                  class="input-text"
+                  class="input-text input-text-login"
                 />
                 <div class="icon-password">
                   <i
