Fix bug xóa cấu hình webhook, Fix bug Validate cấu hình webhook

--- a/src/app/main/system-config/system-config.component.html
+++ b/src/app/main/system-config/system-config.component.html
@@ -12,6 +12,7 @@
                 formControlName="api" 
                 optionLabel="label" 
                 (onChange)="onApiChange($event, i)"
+                optionDisabled="disabled"
                 placeholder="{{'choose.api' | translate}}" 
                 ></p-dropdown>
             </div>
