--- a/src/app/main/system-config/delete-config-dialog/delete-config-dialog.component.html
+++ b/src/app/main/system-config/delete-config-dialog/delete-config-dialog.component.html
@@ -6,8 +6,8 @@
       <h3 style="font-family: inherit;text-align: center;">{{'delete.config.question' | translate}}</h3>
   </div>
   <div class="row" style="justify-content: center;padding-top: 10px;">
-      <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-      <button class="save-button" (click)="onSubmit()">{{'btn.delete' | translate}}</button>
+      <button class="cancel-button" (click)="onCancel()" type="button">{{'btn.cancel' | translate}}</button>
+      <button class="save-button" (click)="onDelete()">{{'btn.delete' | translate}}</button>
   </div>
 </div>
  
