Fix chọn api webhook

--- a/src/app/main/system-config/system-config.component.html
+++ b/src/app/main/system-config/system-config.component.html
@@ -8,7 +8,7 @@
             <div class="dropdown-container">
               <p-dropdown 
                 panelStyleClass="font"
-                [options]="apiList" 
+                [options]="getFilteredOptions(i)" 
                 formControlName="api" 
                 optionLabel="label" 
                 (onChange)="onApiChange($event, i)"
