thêm note chú ý khi ký

--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
@@ -3,7 +3,7 @@
     <div class="title-dialog-sign">{{this.datas.title}}</div>
   </div>
 
-  <div class="text-select margin-top-20px">{{'text.select' | translate}}</div>
+  <div class="text-select margin-top-20px">{{'text.select' | translate}} <span style="color: orange; font-style: italic; font-size: 12.5px;">{{'text.select.note' | translate}}</span></div>
 
   <div class="content">
     <div class="margin-top-20px d-flex justify-content-between gap-5">
