--- a/src/app/main/system-config/system-config.component.html
+++ b/src/app/main/system-config/system-config.component.html
@@ -63,16 +63,27 @@
                   <span class="require_star">*</span>
                 </div>
                 <textarea id="apiKey" rows="6" placeholder="{{'example.apikey' | translate}}" (input)="validateApiKey($event)"  maxlength="36" formControlName="apikey"></textarea>
-                <div *ngIf="isFieldInvalid(i, 'apikey')">
+                <!-- <div *ngIf="isFieldInvalid(i, 'apikey')">
                   <div *ngIf="submitted && f.apikey.errors">
-                    <small class="text-danger" *ngIf="f.apikey.errors['required']">API Key không được phép bỏ trống.</small>
+                    <small class="text-danger" *ngIf="f.apikey.errors['required']">API Key không được phép bỏ trống1.</small>
                     <small class="text-danger" *ngIf="f.apikey.errors['pattern']">API Key phải theo định dạng: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.</small>
                     <small class="text-danger" *ngIf="f.apikey.errors['length']">API Key phải đúng 36 ký tự.</small>
                     <small class="text-danger" *ngIf="f.apikey.errors['whitespace']">API Key không được chứa khoảng trắng.</small>
                   </div>
-                  <div *ngIf="(f.apikey.value === '' && (f.apikey.touched || f.apikey.dirty))">
-                    <small class="text-danger">API Key không được phép bỏ trống</small>
-                  </div>
+                </div> -->
+                <div *ngIf="isFieldInvalid(i, 'apikey')">
+                  <small class="text-danger" *ngIf="submittedForms[i] && form.get('apikey')?.errors?.['required']">
+                    API Key không được phép bỏ trống.
+                  </small>
+                  <small class="text-danger" *ngIf="form.get('apikey')?.errors?.['pattern']">
+                    API Key phải theo định dạng: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.
+                  </small>
+                  <small class="text-danger" *ngIf="form.get('apikey')?.errors?.['length']">
+                    API Key phải đúng 36 ký tự.
+                  </small>
+                  <small class="text-danger" *ngIf="form.get('apikey')?.errors?.['whitespace']">
+                    API Key không được chứa khoảng trắng.
+                  </small>
                 </div>
               </div>
             </div>
