sửa css giao diện login

--- a/src/app/login/forgot-password/forgot-password.component.scss
+++ b/src/app/login/forgot-password/forgot-password.component.scss
@@ -33,11 +33,9 @@
   min-width: 370px;
 }
 
-// .login-form-mobile{
-//   padding-top: 20%;
-//   padding-left: 5%;
-//   padding-right: 5%;
-// }
+.login-form-mobile{
+  width: 100%;
+}
 
 .form-group{
   // margin: 20px;
@@ -249,12 +247,12 @@ img {
   height: 505px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
 }
 
 .right-panel-mobile {
-  // width: 100%;
+  width: 100%;
   // height: calc(100vh);
   // position: relative;
   // background-size: cover !important;
