--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -231,6 +231,17 @@
                         <!--Mã số thuế hsm-->
                         <div class="row">
                             <div class="col-md-12">
+                                <div>{{'supplier' | translate}}</div>
+                                <div>
+                                    <p-dropdown panelStyleClass="font" [options]="supplierList" formControlName="supplier" optionLabel="name" optionValue="id" placeholder="{{'choose.supplier' | translate}}" [filter]="false" filterBy="name" [showClear]="false"
+                                    (onChange)="onSupplierChange($event)">
+                                    </p-dropdown>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- <div class="row">
+                            <div class="col-md-12">
                                 <div>{{'tax_code' | translate}}</div>
                                 <div class="input-data">
                                     <input type="text" formControlName="taxCodeHsm">
@@ -239,10 +250,20 @@
                                     <div *ngIf="f.taxCodeHsm.errors.pattern">{{'Mã số thuế/CMT/CCCD không đúng định dạng' | translate}}</div>
                                 </div>
                             </div>
+                        </div> -->
+
+                        <!--UUID hsm-->
+                        <div *ngIf="!this.isHsmIcorp" class="row">
+                            <div class="col-md-12">
+                                <div>UUID</div>
+                                <div class="input-data">
+                                    <input type="text" formControlName="uuid" id="uuid">
+                                </div>
+                            </div>
                         </div>
 
                         <!--Tên người dùng hsm-->
-                        <div class="row">
+                        <div *ngIf="this.isHsmIcorp" class="row">
                             <div class="col-md-12">
                                 <div>{{'user.name.v2' | translate}}</div>
                                 <div class="input-data">
@@ -255,14 +276,14 @@
                         </div>
 
                         <!--Mật khẩu cấp 1 hsm-->
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-12">
                                 <div>{{'password.level1' | translate}}</div>
                                 <div class="input-data">
                                     <input class="pw" type="text" formControlName="password1Hsm">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
