Xử lý FE File đính kèm khi tạo hợp đồng có thể lấy từ các file up trên Quản lý thư mục

--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -83,7 +83,7 @@
         <div class="label_item">{{'contract.connect' | translate}}</div>
         <div>
           <p-multiSelect styleClass="font" [options]="contractConnectList" [(ngModel)]="contractConnect"
-            optionLabel="name" optionValue="id" display="chip" placeholder="{{'choose.contract' | translate}}"></p-multiSelect>
+            optionLabel="name" optionValue="id" display="chip" placeholder="{{'choose.attach.file' | translate}}"></p-multiSelect>
         </div>
       </div>
     </div>
