--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -18,7 +18,13 @@
 
                 <div class="col-md-4">
                     <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
-                    <div class="input-data" *ngIf="!this.isDisable">
+                    <div *ngIf="id == null" class="input-data">
+                      <input type="text" formControlName="email">
+                    </div>
+                    <div *ngIf="id != null" class="input-data hidden-color">
+                      <input type="text" formControlName="email" readonly class="hidden-color">
+                    </div>
+                    <!-- <div class="input-data" *ngIf="!this.isDisable">
                       <input type="text" formControlName="email">
                     </div>
                     <div class="input-data" *ngIf="this.isDisable === 'SDT'">
@@ -26,7 +32,7 @@
                     </div>
                     <div *ngIf="this.isDisable === 'EMAIL' || this.isDisable === 'EMAIL_AND_SDT'" class="input-data hidden-color">
                       <input type="text" formControlName="email" readonly>
-                    </div>
+                    </div> -->
                     <div *ngIf="submitted && f.email.errors" class="invalid">
                         <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
                         <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
@@ -44,12 +50,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
-                    <div class="input-data" *ngIf="!this.isDisable">
+                    <div class="input-data">
+                      <input type="text" formControlName="phone">
+                    </div>
+                    <!-- <div class="input-data" *ngIf="!this.isDisable">
                       <input type="text" formControlName="phone">
                     </div>
                     <div class="input-data" *ngIf="this.isDisable === 'EMAIL'">
                       <input type="text" formControlName="phone">
-                  </div>
+                  </div> -->
                   <div *ngIf="this.isDisable === 'SDT' || this.isDisable === 'EMAIL_AND_SDT'" class="input-data hidden-color">
                     <input type="text" formControlName="phone" readonly>
                   </div>
@@ -88,7 +97,7 @@
                 </div>
 
             </div>
-            <!-- <div class="row" style="justify-content: center;padding-top: 10px;">
+            <div class="row" style="justify-content: center;padding-top: 10px;">
                 <div class="col-md-2" style="text-align: center;">
                     <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
                     <span> {{'unit.active' | translate}}</span>
@@ -97,8 +106,8 @@
                     <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
                     <span> {{'unit.inactive' | translate}}</span>
                 </div>
-            </div> -->
-            <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
+            </div>
+            <!-- <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
               <div style="display: flex;">
                 <div style="display: flex;">
                   <span>{{'choose.type.sign' | translate}}:</span>
@@ -114,11 +123,11 @@
                     <input type="radio" name="confirm-radio-consider" value="EMAIL_AND_SDT" formControlName="login_type" name="login_type">
                     <span> {{'type.sign.email.phone' | translate}}</span>
                   </div>
-                </div>
+                </div> -->
 
-                <div style="display: flex; margin-left: 35px;">
+                <!-- <div style="display: flex; margin-left: 35px;"> -->
                 <!-- <div style="display: flex;"> -->
-                  <span>{{'status.account' | translate}}:</span>
+                  <!-- <span>{{'status.account' | translate}}:</span>
                   <div style="margin-left: 20px;">
                     <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
                     <span> {{'unit.active' | translate}}</span>
@@ -129,7 +138,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
         </div>
 
         <br>
