--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -15,12 +15,15 @@
             </div>
             <div class="col-md-4">
                 <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
-                <div class="input-data" *ngIf="this.isDisable == 'SDT'">
+                <div class="input-data hidden-color">
+                  <input type="text" formControlName="email" [readonly]="true" class="hidden-color">
+                </div>
+                <!-- <div class="input-data" *ngIf="this.isDisable == 'SDT'">
                   <input type="text" formControlName="email">
                 </div>
                 <div *ngIf="this.isDisable == 'EMAIL' || this.isDisable == 'EMAIL_AND_SDT'" class="input-data hidden-color">
                   <input type="text" formControlName="email" readonly>
-                </div>
+                </div> -->
                 <div *ngIf="submitted && f.email.errors" class="invalid">
                     <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
                     <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
@@ -37,12 +40,16 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
-                <div class="input-data" *ngIf="this.isDisable == 'EMAIL'">
+                <div class="input-data">
+                  <input type="text" formControlName="phone">
+                </div>
+                
+                <!-- <div class="input-data" *ngIf="this.isDisable == 'EMAIL'">
                   <input type="text" formControlName="phone">
                 </div>
                 <div *ngIf="this.isDisable == 'SDT' || this.isDisable == 'EMAIL_AND_SDT'" class="input-data hidden-color">
                   <input type="text" formControlName="phone" readonly>
-                </div>
+                </div> -->
                 <div *ngIf="submitted && f.phone.errors" class="invalid">
                     <div *ngIf="f.phone.errors.required">{{'error.user.phone.required' | translate}}</div>
                     <div *ngIf="f.phone.errors.pattern">{{'error.user.phone.format' | translate}}</div>
@@ -68,7 +75,7 @@
             </div>
         </div>
         
-        <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
+        <!-- <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
           <div style="display: flex;">
             <div style="display: flex;">
               <span>{{'choose.type.sign' | translate}}:</span>
@@ -86,7 +93,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="row" style="justify-content: center;padding-top: 0px;">
             <button class="save-button" (click)="updateUser()">{{'btn.update' | translate}}</button>
