--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -138,15 +138,15 @@
                         <!--Mã số thuế hsm-->
                         <div class="row">
                             <div class="col-md-12">
-                                <div>{{'Mã số thuế' | translate}}</div>
+                                <div>{{ 'supplier' | translate}}</div>
                                 <div>
-                                    <div [innerHTML]="taxCodeHsm" class="input_text"></div>
+                                    <div [innerHTML]="supplier" class="input_text"></div>
                                 </div>
                             </div>
                         </div>
 
                         <!--Tên người dùng hsm-->
-                        <div class="row">
+                        <div *ngIf="this.isHsmIcorp" class="row">
                             <div class="col-md-12">
                                 <div>{{'user.name.v2' | translate}}</div>
                                 <div>
@@ -155,14 +155,23 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div *ngIf="!this.isHsmIcorp" class="row">
+                            <div class="col-md-12">
+                                <div>UUID</div>
+                                <div>
+                                    <div [innerHTML]="nameHsm" class="input_text"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- <div class="row">
                             <div class="col-md-12">
                                 <div>{{'password.level1' | translate}}</div>
                                 <div>
                                     <div [innerHTML]="password1Hsm" class="input_text_pw"></div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
