--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -159,7 +159,7 @@
                             <div class="col-md-12">
                                 <div>UUID</div>
                                 <div>
-                                    <div [innerHTML]="nameHsm" class="input_text"></div>
+                                    <div [innerHTML]="uuid" class="input_text"></div>
                                 </div>
                             </div>
                         </div>
