sửa phần trang chủ login

--- a/src/app/login/forgot-password/forgot-password.component.scss
+++ b/src/app/login/forgot-password/forgot-password.component.scss
@@ -56,7 +56,7 @@
   font-weight: 800;
   font-size: 40px;
   line-height: 48px;
-  background: #FFFFFF33;
+  background: #fff;
 }
 
 .footer-text {
@@ -66,8 +66,8 @@
 }
 
 .copyright{
-  color: #FFFFFFDB;
-  font-weight: 300;
+  color: #001A4DDB;
+  font-weight: 400;
   font-size: 14px;
   line-height: 16px;
 }
