--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -54,7 +54,7 @@
   font-weight: 800;
   font-size: 40px;
   line-height: 48px;
-  background: #FFFFFF33;
+  background: #fff;
 }
 
 .footer-text {
@@ -64,8 +64,8 @@
 }
 
 .copyright{
-  color: #FFFFFFDB;
-  font-weight: 300;
+  color: #001A4DDB;
+  font-weight: 400;
   font-size: 14px;
   line-height: 16px;
 }
